<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutContentCadRide"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ActRide"
    tools:showIn="@layout/activity_act_ride">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/lbl_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtName"
        app:layout_constraintStart_toStartOf="@+id/txtName"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <TextView
        android:id="@+id/txtFrom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lbl_from"
        app:layout_constraintEnd_toEndOf="@+id/edtName"
        app:layout_constraintStart_toStartOf="@+id/edtName"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <TextView
        android:id="@+id/txtTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lbl_to"
        app:layout_constraintEnd_toEndOf="@+id/edtFrom"
        app:layout_constraintStart_toStartOf="@+id/edtFrom"
        app:layout_constraintTop_toBottomOf="@+id/edtFrom" />

    <TextView
        android:id="@+id/txtNextTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lbl_nextTo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edtTo"
        app:layout_constraintTop_toBottomOf="@+id/edtTo" />

    <TextView
        android:id="@+id/txtNumero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lbl_number"
        app:layout_constraintEnd_toEndOf="@+id/edtNextTo"
        app:layout_constraintStart_toStartOf="@+id/edtNextTo"
        app:layout_constraintTop_toBottomOf="@+id/edtNextTo" />

    <EditText
        android:id="@+id/edtNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/txtNumero"
        app:layout_constraintStart_toStartOf="@+id/txtNumero"
        app:layout_constraintTop_toBottomOf="@+id/txtNumero" />

    <EditText
        android:id="@+id/edtNextTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtNextTo"
        app:layout_constraintStart_toStartOf="@+id/txtNextTo"
        app:layout_constraintTop_toBottomOf="@+id/txtNextTo" />

    <EditText
        android:id="@+id/edtTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtTo"
        app:layout_constraintStart_toStartOf="@+id/txtTo"
        app:layout_constraintTop_toBottomOf="@+id/txtTo" />

    <EditText
        android:id="@+id/edtFrom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtFrom"
        app:layout_constraintStart_toStartOf="@+id/txtFrom"
        app:layout_constraintTop_toBottomOf="@+id/txtFrom" />

</androidx.constraintlayout.widget.ConstraintLayout>